[package]
name = "portunus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite", "numeric", "time", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15.0"
serenity = "0.11"
tabled = "0.11.1"
time = "0.3.20"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }